# ESP-enlisted-not-qworking-watin-gfor-someone-to-come-and-tske-this-to-make-it-actually-work-

./: README.md
Research/: BUILD_INSTRUCTIONS.txt  CMakeLists.txt  EnlistedESPOverlay.vcxproj  build.bat  build.ps1  build_with_env.bat  rebuild.bat  run_debug.bat
Research/Enlisted.12345678/x64/Release/Enlisted.12345678.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Research/Release/: EnlistedESPOverlay.exe.recipe
Research/Release/Enlisted.12345678.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  EnlistedESPOverlay.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Research/include/: esp_renderer.h  game_capture.h  memory_reader.h
Research/src/: esp_renderer.cpp  game_capture.cpp  main.cpp  memory_reader.cpp
